app/manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: story-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: story-app
  template:
    metadata:
      labels:
        app: story-app
    spec:
      containers:
        - name: story-app
          image: quay.io/hacohen/story-app:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "250m"
