app/manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: story-app
spec:
  selector:
    app: story-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
