app/manifest/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: story-app
spec:
  to:
    kind: Service
    name: story-app
  port:
    targetPort: 8080
  tls:
    termination: edge
